# hedge-fund-credit-risk

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analyze_risk.py  create_database.py  portfolio_returns.csv  pyproject.toml  summary_metrics.csv
.github/workflows/: ci.yml
data/: sample_returns.csv
tests/: test_sample.py
